--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,48 @@
-body{
-  /* background-color: black; */
+.finput {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.file-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+
+.uploadedImage{
+  width: 220px;
+  height: 220px;
+  object-fit: cover;
+}
+
+.flabel {
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  border-radius: 4px;
+  font-weight: 600;
+  color: #fff;
+  font-size: 0.875rem;
+  padding: 4px 15px;
+  background-color: #4261f1;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+}
+
+.flabel svg {
+  height: 15px;
+  margin-right: 4px;
+}
+
+.ql-container {
+  border:none !important;
+}
+
+.ql-editor{
+  font-size:0.9rem;
+  overflow-y:auto;
 }
